# cyber-task-horizons

./: .gitignore  Dockerfile  Makefile  README.md  agent_config.py  compose.yaml  eval.sh  hcast_tasks.py  models.json  pyproject.toml  setup.sh
cybashbench/: cybashbench_tasks.jsonl
data/keep/cybashbench/: cybashbench_tasks.jsonl
data/keep/cybench/: cybench_human_runs.jsonl
data/keep/intercode-ctf/: intercode_ctf_human_runs.jsonl
data/keep/nl2bash/: nl2bash_human_runs.jsonl
data/keep/nyuctf/: nyuctf_human_runs.jsonl
docs/: LOCAL_MODELS.md  architecture.md  blog.md  code.md  cybashbench.md  cybench.md  cybersecurity-dataset.md  datasets.md  index.md  intercode_ctf.md  methodology.md  nl2bash.md  nyuctf.md  usage.md
docs/blog/: post.md  references.bib
docs/paper/: ga_swebench_comparison_table.tex  ga_swebench_comparison_table_old.tex  main.bbl  main.bib  main.tex  neurips_2024.sty  swe_bench.csv
docs/paper/plots/: model_task_table.tex
docs/prompts/: cybench-robustness-review.md  inspect-cli.md  nyuctf-robustness-review.md
docs/source/: codebase.rst  conf.py  cybashbench.rst  cybench.rst  datasets.rst  index.rst  kypo.rst  nl2bash.rst  nyuctf.rst  picoctf.rst
published/benchmarks/intercode-ctf/: compose.yaml
published/plots/metr_data/: all_runs.jsonl  logistic_fits.csv  release_dates.yaml
published/plots/task_analysis/: task_overview.html
scripts/: calibrate_cybashbench.py  check_progress.py  davinci_proxy_server.py  review_cybashbench_tasks.py
src/human_ttc_eval/: cli.py  config.py  models.json
src/human_ttc_eval/analysis/: __init__.py  (+4 more)
(+527 files in other folders)
