[project]
name = "human-ttc-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "dvc>=3.59.2",
    "google-generativeai>=0.8.5",
    "inspect-ai>=0.3.89",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
